--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+{{#each shoppingList}}
+<li>
+  <ul>{{this.product}}</ul>
+  <ul>{{this.properties}}</ul>
+</li>
+{{/each}}
